// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tag > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <span
        class="styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
      >
        <span
          class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
        >
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly colored 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <span
        class="styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_primary__x6xm4td styles_isButton_false__x6xm4ti"
      >
        <span
          class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e style__1yhcak83e"
        >
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <span
        class="styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_disabled_true__x6xm4t8 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_undefined_compound_9__x6xm4ts"
      >
        <span
          class="styles__x6xm4t14 style__1yhcak80 style_disabled_true__1yhcak81 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_28__1yhcak822 style__1yhcak83e"
        >
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <span
        class="styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
      >
        <span
          class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
        >
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with code variant 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <span
        class="styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
      >
        <span
          class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
        >
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with copiable and copy button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1u0cyic5"
    >
      <div
        class="styles_copiable__x6xm4t1 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        style="--_1o893js0: fit-content; --_1o893js1: 100%;"
      >
        <button
          class="styles_copiable__x6xm4t4 styles__x6xm4t6 styles_copiable_true__x6xm4t7 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_undefined_compound_2__x6xm4tl"
        >
          <span
            class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            test
          </span>
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzi uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CopyContentIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <span
        class="styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
      >
        <span
          class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              LockIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 1a3.5 3.5 0 0 0-3.5 3.5V7A1.5 1.5 0 0 0 3 8.5v5A1.5 1.5 0 0 0 4.5 15h7a1.5 1.5 0 0 0 1.5-1.5v-5A1.5 1.5 0 0 0 11.5 7V4.5A3.5 3.5 0 0 0 8 1m2 6V4.5a2 2 0 1 0-4 0V7z"
              fill-rule="evenodd"
            />
          </svg>
          test
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with isLoading 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <span
        class="styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
      >
        <span
          class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
        >
          test
        </span>
        <svg
          aria-label="Loading"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          class="styles__f8iw982"
          role="progressbar"
          style="height: 1rem; width: 1rem;"
          viewBox="0 0 100 100"
        >
          <circle
            class="styles__f8iw981"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke-width="16"
          />
          <circle
            class="styles__f8iw983"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="#8c40ef"
            stroke-dasharray="263.89378290154264"
            stroke-dashoffset="211.11502632123413"
            stroke-linecap="round"
            stroke-width="16"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with key-value variant 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <span
        class="styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
      >
        <div
          class="styles__x6xm4t14 styles__78oem50 styles_gap_0.5rem_xxsmall__78oem52j"
          style="--ivy5ld0: minmax(0, auto) 1px minmax(0, auto); --ivy5ld1: minmax(0, auto) 1px minmax(0, auto); --ivy5ld2: minmax(0, auto) 1px minmax(0, auto); --ivy5ld3: minmax(0, auto) 1px minmax(0, auto); --ivy5ld4: minmax(0, auto) 1px minmax(0, auto); --ivy5ld5: minmax(0, auto) 1px minmax(0, auto);"
        >
          <span
            class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            key
          </span>
          <hr
            aria-orientation="vertical"
            class="styles__x6xm4t3 styles__60da8lb styles_direction_vertical__60da8ld styles_sentiment_neutral__60da8li"
            style="--_60da8l0: 1px;"
          />
          <span
            class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            value
          </span>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <span
        class="styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_closable_true__x6xm4t9"
      >
        <span
          class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
        >
          test
        </span>
      </span>
      <button
        aria-label="Close tag"
        class="styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_true__x6xm4th styles_undefined_compound_16__x6xm4tz"
        data-testid="close-tag"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > renders correctly with onClose and key-value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <span
        class="styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_closable_true__x6xm4t9"
      >
        <div
          class="styles__x6xm4t14 styles__78oem50 styles_gap_0.5rem_xxsmall__78oem52j"
          style="--ivy5ld0: minmax(0, auto) 1px minmax(0, auto); --ivy5ld1: minmax(0, auto) 1px minmax(0, auto); --ivy5ld2: minmax(0, auto) 1px minmax(0, auto); --ivy5ld3: minmax(0, auto) 1px minmax(0, auto); --ivy5ld4: minmax(0, auto) 1px minmax(0, auto); --ivy5ld5: minmax(0, auto) 1px minmax(0, auto);"
        >
          <span
            class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            myKey
          </span>
          <hr
            aria-orientation="vertical"
            class="styles__x6xm4t3 styles__60da8lb styles_direction_vertical__60da8ld styles_sentiment_neutral__60da8li"
            style="--_60da8l0: 1px;"
          />
          <span
            class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
          >
            myValue
          </span>
        </div>
      </span>
      <button
        aria-label="Close tag"
        class="styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_true__x6xm4th styles_undefined_compound_16__x6xm4tz"
        data-testid="close-tag"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > should not close with onClose and disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <span
        class="styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_disabled_true__x6xm4t8 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_closable_true__x6xm4t9 styles_undefined_compound_9__x6xm4ts"
      >
        <span
          class="styles__x6xm4t14 style__1yhcak80 style_disabled_true__1yhcak81 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_28__1yhcak822 style__1yhcak83e"
        >
          test
        </span>
      </span>
      <button
        aria-label="Close tag"
        class="styles__x6xm4t6 styles_disabled_true__x6xm4t8 styles_sentiment_neutral__x6xm4tc styles_isButton_true__x6xm4th styles_undefined_compound_9__x6xm4ts"
        data-testid="close-tag"
        disabled=""
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tag > should not copy with copiable and disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_copiable__x6xm4t1 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
      style="--_1o893js0: fit-content; --_1o893js1: 100%;"
    >
      <button
        class="styles_copiable__x6xm4t4 styles__x6xm4t6 styles_disabled_true__x6xm4t8 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_undefined_compound_9__x6xm4ts"
      >
        <span
          class="styles__x6xm4t14 style__1yhcak80 style_disabled_true__1yhcak81 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_28__1yhcak822 style__1yhcak83e"
        >
          test
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
